--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -5,4 +5,6 @@ jobs:
   Release-Build:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
       - run: make
