--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -11,7 +11,7 @@ jobs:
       - run: cd daemon && make
       - name: Read VERSION file
         id: getversion
-        run: echo "::set-output name=version::$(cat VERSION)"
+        run: echo "{version}=$(cat VERSION)" >> $GITHUB_OUTPUT
       - name: Create tar.gz file
         uses: a7ul/tar-action@v1.1.3
         with:
@@ -30,8 +30,10 @@ jobs:
         with:
           path: wb-linux-${{ steps.getversion.outputs.version }}.tar.gz
           destination: wbvpn-release/wb-linux-${{ steps.getversion.outputs.version }}.tar.gz
+          process_gcloudignore: false
       - name: Upload to Google Cloud Storage
         uses: google-github-actions/upload-cloud-storage@v1.0.2
         with:
           path: wb-linux-${{ steps.getversion.outputs.version }}.tar.gz
           destination: wbvpn-release/wb-linux-latest.tar.gz
+          process_gcloudignore: false
