--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -20,11 +20,13 @@ jobs:
             cli/wb
             daemon/wbd
           outPath: wb-linux-${{ steps.getversion.outputs.version }}.tar.gz
-      - name: Authenticate with GCP
-        uses: google-github-actions/setup-gcloud@v1.1.0
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v1'
         with:
           service_account: 'github-service-account@vpnwebsite-972ea.iam.gserviceaccount.com'
           workload_identity_provider: projects/61621990789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
+      - name: Authenticate with GCP
+        uses: google-github-actions/setup-gcloud@v1.1.0
       - name: Upload to Google Cloud Storage
         uses: google-github-actions/upload-cloud-storage@v1.0.2
         with:
