--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -14,7 +14,7 @@ jobs:
       - run: cd daemon && make
       - name: Read VERSION file
         id: getversion
-        run: echo "{version}=$(cat VERSION)" >> $GITHUB_OUTPUT
+        run: echo "version=$(cat VERSION)" >> $GITHUB_OUTPUT
       - name: Create tar.gz file
         uses: a7ul/tar-action@v1.1.3
         with:
@@ -23,6 +23,8 @@ jobs:
             cli/wb
             daemon/wbd
           outPath: wb-linux-${{ steps.getversion.outputs.version }}.tar.gz
+      - name: Copy tar.gz
+        run: cp wb-linux-${{ steps.getversion.outputs.version }}.tar.gz wb-linux-latest.tar.gz
       - id: 'auth'
         uses: 'google-github-actions/auth@v1'
         with:
@@ -34,11 +36,11 @@ jobs:
         uses: google-github-actions/upload-cloud-storage@v1.0.2
         with:
           path: wb-linux-${{ steps.getversion.outputs.version }}.tar.gz
-          destination: wbvpn-release/wb-linux-${{ steps.getversion.outputs.version }}.tar.gz
+          destination: wbvpn-release
           process_gcloudignore: false
       - name: Upload to Google Cloud Storage
         uses: google-github-actions/upload-cloud-storage@v1.0.2
         with:
           path: wb-linux-${{ steps.getversion.outputs.version }}.tar.gz
-          destination: wbvpn-release/wb-linux-latest.tar.gz
+          destination: wbvpn-release
           process_gcloudignore: false
