--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -41,6 +41,6 @@ jobs:
       - name: Upload to Google Cloud Storage
         uses: google-github-actions/upload-cloud-storage@v1.0.2
         with:
-          path: wb-linux-${{ steps.getversion.outputs.version }}.tar.gz
+          path: wb-linux-latest.tar.gz
           destination: wbvpn-release
           process_gcloudignore: false
